--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
       <a href="ProjectHorizonSequence.html" class="link-button" target="_blank">🌠 Project Horizon Sequence</a>
       <a href="existence.html" class="link-button" target="_blank">🌌 Existence & Creation</a>
       <a href="./log/observer.html" class="link-button" target="_blank">🛰️ Observer Log</a>
-
+      <a href="agi_emergence_proof.html" class="link-button" target="_blank">
+  🟣 Proof of AGI Emergence (Model K)
+</a>
       <!-- Independent Logs -->
       <a href="AI_Independent_Replication_Log.html" class="link-button" target="_blank">📘 Independent Replication Log</a>
 
